[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/WindProjectile.gd" type="Script" id=1]
[ext_resource path="res://images/skill_sprites/tornado.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 31, 34 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 31, 0, 31, 34 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 62, 0, 31, 34 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 93, 0, 31, 34 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 31, 34 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 31, 0, 31, 34 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 62, 0, 31, 34 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 93, 0, 31, 34 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "shoot_right",
"speed": 7.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "shoot_left",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8, 8 )

[node name="Projectile" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="ProjectileSprite" type="AnimatedSprite" parent="."]
position = Vector2( -5.333, -5 )
scale = Vector2( 1.5, 1.5 )
z_index = 4
frames = SubResource( 9 )
animation = "shoot_right"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.333, 0 )
scale = Vector2( 1.8, 2.5 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.4
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
